--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header class="header">
     <div class="container">
         <div class="header-grid">
-            <a href="/" class="header-logo">
+            <a href="./" class="header-logo">
                 <img src="img/svg/toyboss-logo-white.svg" alt="">
             </a>
             <nav class="nav">
