--- a/news-detail.html
+++ b/news-detail.html
@@ -16,16 +16,16 @@
 <header class="header">
     <div class="container">
         <div class="header-grid">
-            <a href="./" class="header-logo">
+            <a href="/" class="header-logo">
                 <img src="img/svg/toyboss-logo-white.svg" alt="">
             </a>
             <nav class="nav">
                 <a href="./about-us.html">О НАС</a>
-                <a href="">Производство</a>
-                <a href="">Продукция</a>
-                <a href="">СОТРУДНИЧЕСТВО</a>
+                <a href="./production.html">Производство</a>
+                <a href="./catalog.html">Продукция</a>
+                <a href="./cooperation.html">СОТРУДНИЧЕСТВО</a>
                 <a href="./news.html">НОВОСТИ</a>
-                <a href="">КОНТАКТЫ</a>
+                <a href="./contacts.html">КОНТАКТЫ</a>
             </nav>
             <div class="nav-right">
                 <div class="nav-right-set-lang">
@@ -53,11 +53,11 @@
     </div>
     <nav class="mobile-menu-head-nav">
         <a href="./about-us.html">О НАС</a>
-        <a href="">Производство</a>
-        <a href="">Продукция</a>
-        <a href="">СОТРУДНИЧЕСТВО</a>
+        <a href="./production.html">Производство</a>
+        <a href="./catalog.html">Продукция</a>
+        <a href="./cooperation.html">СОТРУДНИЧЕСТВО</a>
         <a href="./news.html">НОВОСТИ</a>
-        <a href="">КОНТАКТЫ</a>
+        <a href="./contacts.html">КОНТАКТЫ</a>
     </nav>
     <a href="" class="red-button button">Игра «Ustukan»</a>
 </div>
@@ -263,9 +263,9 @@
                     <div class="footer-right-title">Меню</div>
                     <nav class="footer-right-nav">
                         <a href="">О НАС</a>
-                        <a href="">Производство</a>
-                        <a href="">Продукция</a>
-                        <a href="">СОТРУДНИЧЕСТВО</a>
+                        <a href="./production.html">Производство</a>
+                        <a href="./catalog.html">Продукция</a>
+                        <a href="./cooperation.html">СОТРУДНИЧЕСТВО</a>
                         <a href="">НОВОСТИ</a>
                     </nav>
                 </div>
