--- a/index.html
+++ b/index.html
@@ -821,6 +821,9 @@
             </div>
 
         </div>
+        <div class="section-show-more">
+            <a href="./faq.html" class="button red-button">Все вопросы</a>
+        </div>
     </div>
 </section>
 
