--- a/contacts.html
+++ b/contacts.html
@@ -47,7 +47,7 @@
 </header>
 <div id="mobile-menu" class="mobile-menu">
   <div class="mobile-menu-head">
-    <a href=""><img src="img/svg/toyboss-logo-blue.svg" alt=""></a>
+    <a href="./"><img src="img/svg/toyboss-logo-blue.svg" alt=""></a>
     <div onclick="hiddenMobileMenu()">
       <img src="img/svg/close.svg" alt="">
     </div>
