--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <header class="header">
     <div class="container">
         <div class="header-grid">
-            <a href="/" class="header-logo">
+            <a href="./" class="header-logo">
                 <img src="img/svg/toyboss-logo-white.svg" alt="">
             </a>
             <nav class="nav">
@@ -47,7 +47,7 @@
 </header>
 <div id="mobile-menu" class="mobile-menu">
     <div class="mobile-menu-head">
-        <a href=""><img src="img/svg/toyboss-logo-blue.svg" alt=""></a>
+        <a href="./"><img src="img/svg/toyboss-logo-blue.svg" alt=""></a>
         <div onclick="hiddenMobileMenu()">
             <img src="img/svg/close.svg" alt="">
         </div>
