--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
 <header class="header">
   <div class="container">
     <div class="header-grid">
-      <a href="/" class="header-logo">
+      <a href="./" class="header-logo">
         <img src="img/svg/toyboss-logo-white.svg" alt="">
       </a>
       <nav class="nav">
@@ -116,9 +116,6 @@
                         <li class="product-block-content-tabs-item">
                           <a href="#product-tab-1-2">Состав</a>
                         </li>
-                        <li class="product-block-content-tabs-item">
-                          <a href="#product-tab-1-3">Специи</a>
-                        </li>
                       </ul>
                       <div class="product-block-content-tabs-content-wrapper" id="product-tab-1-1">
                         <p class="product-block-content-tabs-content-desc">Пепперони отлично подходит для
@@ -137,11 +134,6 @@
                         <p class="product-block-content-tabs-content-desc">Lorem ipsum dolor sit amet, consectetur
                           adipisicing elit. Doloribus, tempora!</p>
                       </div>
-                      <div class="product-block-content-tabs-content-wrapper" id="product-tab-1-3">
-                        <p class="product-block-content-tabs-content-desc">Lorem ipsum dolor sit amet, consectetur
-                          adipisicing elit. Consequuntur dicta dolore incidunt ipsa neque, quibusdam similique ut.
-                          Ab ipsa, nobis!</p>
-                      </div>
                       <div class="product-block-content-certificates">
                         <div class="product-block-content-certificates-item">
                           <img src="img/svg/certificate-halal-1.svg" alt="">
@@ -155,13 +147,12 @@
                       <img src="img/png/man-product-decor.png" alt="">
                     </div>
                     <div class="product-block-content-center-right mode">
-                      <div class="num">13 244</div>
-                      <div class="subtitle-num">любителей Пепперони</div>
-                      <ul>
-                        <li>Какой-нибудь факт, о продажах или</li>
-                        <li>Какой-нибудь факт, о продажах или</li>
-                        <li>Какой-нибудь факт, о продажах или</li>
-                      </ul>
+                      <div class="subtitle-num">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus
+                        ducimus eaque earum exercitationem fuga incidunt itaque iure minus ratione unde. Alias
+                        architecto beatae maiores neque nisi odit ratione! Alias animi aut culpa esse ipsam modi saepe
+                        vero. Aspernatur, autem blanditiis dicta doloremque doloribus eum non quibusdam, sint suscipit
+                        tempore voluptatibus.
+                      </div>
                     </div>
                   </div>
                 </div>
