--- a/about-us.html
+++ b/about-us.html
@@ -62,7 +62,7 @@
     <a href="" class="red-button button">Игра «Ustukan»</a>
 </div>
 
-<section class="about-us-bg-block" style="background-image: url('img/png/about-us-bg.png')">
+<section class="about-us-bg-block" style="background: linear-gradient(90deg, rgba(41, 91, 184, 0.7) 0%, rgba(4, 15, 36, 0.7) 100%), url('img/png/about-us.png')">
 
     <div class="container">
         <h1 class="about-us-bg-block-title rellax" data-rellax-speed="3" >О нас</h1>
@@ -79,8 +79,8 @@
                     продукции. Наша компания предлагает
                 </p>
             </div>
-            <div class="history-block-preview-grid-right rellax" id="scene-about-us" data-rellax-speed="2">
-                <img class="history-block-preview-grid-right-img" data-depth="0.3" src="img/png/history.png" alt="">
+            <div class="history-block-preview-grid-right rellax"  data-rellax-speed="2">
+                <img class="history-block-preview-grid-right-img" src="img/png/history.png" alt="">
             </div>
         </div>
         <div class="history-block-tab" id="tab-history">
