--- a/contacts.html
+++ b/contacts.html
@@ -133,8 +133,9 @@
         <input type="text" placeholder="Ваше ФИО:">
       </label>
       <div class="form-grid">
-        <label class="label">
+        <label class="label label-error">
           <input  type="email" placeholder="Ваш email">
+          <span>Ошибка, попробуйте еще раз</span>
         </label>
         <label class="label">
           <input type="text" placeholder="Ваш номер:" id="phone" value="996 ">
