--- a/cooperation.html
+++ b/cooperation.html
@@ -181,7 +181,7 @@
           <input type="text" placeholder="Ваше имя:">
         </label>
         <label class="label">
-          <input type="text" placeholder="Ваш номер:">
+          <input type="text" placeholder="Ваш номер:" id="phone" value="996 ">
         </label>
       </div>
       <label class="label">
@@ -270,6 +270,7 @@
 <script src="libs/jquery/jquery.counterup.min.js"></script>
 <script src="libs/jquery/jquery-ui.js"></script>
 <script src="libs/lightgallery/lightgallery.js"></script>
+<script src="libs/mask/mask.js"></script>
 <script src="libs/aos/aos.js"></script>
 <script src="js/swiper.js"></script>
 <script src="js/global.js"></script>
