--- a/news.html
+++ b/news.html
@@ -144,12 +144,25 @@
         </div>
         <div class="pagination">
             <div class="pagination-grid">
+                <a href="" class="pagination-item pagination-item-button">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M15.2289 5.32372C15.6605 5.75535 15.6605 6.45517 15.2289 6.8868L10.1158 12L15.2289 17.1132C15.6605 17.5449 15.6605 18.2446 15.2289 18.6762C14.7972 19.1079 14.0975 19.1079 13.6659 18.6762L7.77109 12.7815C7.33946 12.3499 7.33946 11.6501 7.77109 11.2185L13.6659 5.32372C14.0975 4.89209 14.7972 4.89209 15.2289 5.32372Z" fill="currentColor"/>
+                        </g>
+                    </svg>
+                </a>
+
                 <div class="pagination-item">1</div>
                 <a href="" class="pagination-item">2</a>
                 <a href="" class="pagination-item">3</a>
                 <a href="" class="pagination-item">4</a>
-                <a href="" class="pagination-item">5</a>
-                <a href="" class="pagination-item">6</a>
+                <a href="" class="pagination-item">...</a>
+                <a href="" class="pagination-item">34</a>
+                <a href="" class="pagination-item pagination-item-button">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M8.77115 5.32372C8.3395 5.75535 8.3395 6.45517 8.77115 6.8868L13.8842 12L8.77115 17.1132C8.3395 17.5449 8.3395 18.2446 8.77115 18.6762C9.20279 19.1079 9.90249 19.1079 10.3341 18.6762L16.2289 12.7815C16.6605 12.3499 16.6605 11.6501 16.2289 11.2185L10.3341 5.32372C9.90249 4.89209 9.20279 4.89209 8.77115 5.32372Z" fill="currentColor"/>
+                    </svg>
+                </a>
             </div>
         </div>
     </div>
