--- a/cooperation.html
+++ b/cooperation.html
@@ -178,20 +178,20 @@
     <form action="" class="form">
       <div class="form-grid">
         <label class="label">
-          <input type="text" placeholder="Ваше имя:">
+          <input type="text" placeholder="Ваше имя:" required>
         </label>
         <label class="label">
-          <input type="text" placeholder="Ваш номер:" id="phone" value="996 ">
+          <input type="text" placeholder="Ваш номер:" id="phone" value="996 " required>
         </label>
       </div>
       <label class="label">
-        <input type="text" placeholder="Желаемая позиция">
+        <input type="text" placeholder="Желаемая позиция" required>
       </label>
       <label class="label">
         <textarea placeholder="Ваше сообщение" rows="3"></textarea>
       </label>
       <label class="label-checkbox">
-        <input type="checkbox">
+        <input type="checkbox" required>
         <p>Я принимаю условия <span>Пользовательского соглашения</span>, ознакомлен с <span>политикой конфиденциальности</span>, даю <span>Согласие на обработку персональных данных</span>.</p>
       </label>
       <div class="form-flex">
