--- a/production.html
+++ b/production.html
@@ -79,7 +79,7 @@
     <div class="swiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <div class="advantages-block-card">
+          <div class="advantages-block-card hover-blue">
             <div class="advantages-block-card-title">Халал</div>
             <div class="advantages-block-card-footer">
               <div class="advantages-block-card-image">
@@ -92,7 +92,7 @@
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="advantages-block-card">
+          <div class="advantages-block-card hover-blue">
             <div class="advantages-block-card-title">FSSC 22000</div>
             <div class="advantages-block-card-footer">
               <div class="advantages-block-card-image">
@@ -105,7 +105,7 @@
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="advantages-block-card">
+          <div class="advantages-block-card hover-blue">
             <div class="advantages-block-card-title">Полная система прослеживаемости</div>
             <div class="advantages-block-card-footer">
               <div class="advantages-block-card-image">
@@ -118,7 +118,7 @@
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="advantages-block-card">
+          <div class="advantages-block-card hover-blue">
             <div class="advantages-block-card-title">Аккредитованная лаборатория</div>
             <div class="advantages-block-card-footer">
               <div class="advantages-block-card-image">
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="advantages-block-card">
+          <div class="advantages-block-card hover-blue">
             <div class="advantages-block-card-title">Сертифициорованный убойный цех</div>
             <div class="advantages-block-card-footer">
               <div class="advantages-block-card-image">
@@ -144,7 +144,7 @@
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="advantages-block-card">
+          <div class="advantages-block-card hover-blue">
             <div class="advantages-block-card-title">Своя птицефабрика «Агро Куш»</div>
             <div class="advantages-block-card-footer">
               <div class="advantages-block-card-image">
