--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
   </div>
   <section class="main-block">
     <div class="swiper">
+      <div class="swiper-left"></div>
+      <div class="swiper-right"></div>
       <div class="swiper-wrapper ">
         <div
           class="swiper-slide"
@@ -88,6 +90,46 @@
               <a href="" class="button red-button">Подробнее</a>
             </div>
             <div class="swiper-button-wrapper ">
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="swiper-slide"
+          style="background-image: url(img/png/main.png)"
+        >
+          <div class="container rellax" data-rellax-speed="-6">
+            <div class="main-block-text">
+              <h2 class="main-block-title">
+                Производитель колбасных изделий халал №1 в Кыргызстане
+              </h2>
+              <p class="main-block-desc ">
+                Основан в 2012 году
+              </p>
+              <a href="" class="button red-button">Подробнее</a>
+            </div>
+            <div class="swiper-button-wrapper">
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-button-next"></div>
+            </div>
+          </div>
+        </div>
+        <div
+          class="swiper-slide"
+          style="background-image: url(img/png/main.png)"
+        >
+          <div class="container rellax" data-rellax-speed="-6">
+            <div class="main-block-text">
+              <h2 class="main-block-title">
+                Производитель колбасных изделий халал №1 в Кыргызстане
+              </h2>
+              <p class="main-block-desc ">
+                Основан в 2012 году
+              </p>
+              <a href="" class="button red-button">Подробнее</a>
+            </div>
+            <div class="swiper-button-wrapper">
               <div class="swiper-button-prev"></div>
               <div class="swiper-button-next"></div>
             </div>
@@ -954,7 +996,10 @@
     </a>
     <img src="img/svg/check.svg" class="modal-form-image" alt="">
     <h4 class="modal-form-title">Игра еще в разработке</h4>
+    <img src="img/error.png" alt="" width="90px">
+    <h4 class="modal-form-title error-title">Ошибка</h4>
   </div>
+
 </div>
 
 
